testsuite/tests/typing-layouts-block-indices/parsing_idx_bad_dotop.compilers.reference
File "parsing_idx_bad_dotop.ml", line 8, characters 11-12:
8 | let _ = (.*(0))
               ^
Error: Syntax error: A parenthesis here can only follow one of: 
  ".", ".L", ".l", ".n", ".:", ".:L", ".:l", ".:n", ".idx_imm", ".idx_mut".
